# tadoku

./: .gitignore  .gitlab-ci.yml  .prettierrc.toml  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  bun.lockb  eslint.config.js  package-lock.json  package.json  release-please-config.json  release-plz.toml  svelte.config.js  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/workflows/: release-please.yml  release-plz.yml  release.yml
src/: app.css  app.html  themeConstants.js
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  playtime.rs  prelude.rs  scripts.rs  services.rs  storage.rs  util.rs  vndb.rs
src-tauri/src/commands/: cmd_result.rs  jiten.rs  mod.rs  opener.rs  playtime.rs  storage.rs  vndb.rs
src-tauri/src/services/: discord.rs  game_manager.rs  game_saver.rs  games_store.rs  jiten.rs  mod.rs  playtime.rs  settings_store.rs  state.rs  store.rs  system.rs  vndb.rs
src-tauri/src/services/discord/: game_details.rs  mod.rs
src-tauri/src/services/playtime/: classic.rs  exstatic.rs  mod.rs
src-tauri/src/services/stores/: categories.rs  mod.rs  settings.rs
src-tauri/src/services/stores/games/: character.rs  game.rs  mod.rs
src-tauri/src/setup/: background.rs  discord.rs  images.rs  mod.rs  state.rs  store.rs
src-tauri/src/util/: debug.rs  image.rs  mod.rs  process.rs
src/lib/: AddGame.svelte  GamesList.svelte  Sidebar.svelte  constants.ts  state.svelte.js  state.svelte.ts  theme.ts  types.d.ts  util.ts
(+58 files in other folders)
