[package]
name = "tadoku"
version = "1.5.3"
description = "A Visual Novel manager and stats tracker"
authors = ["kofta999 <mostafaxxx555@gmail.com>", "rekka69", "applesx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tadoku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["json"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
url = "2.5.4"
tauri-plugin-shell = "2"
sysinfo = "0.33.1"
discord-rich-presence = "0.2.5"
lnk = "0.5.1"
tauri-plugin-prevent-default = "1.0.2"
x-win = "3.0.0"
tungstenite = "0.17"
tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tauri-plugin-log = "2"
log = "0.4.27"
tauri-plugin-os = "2"

[target.'cfg(windows)'.dependencies]
windows-icons = "0.1.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.dev]
opt-level = 0
